<resources>
    <string name="app_name">행복골프</string>
    <string name="login_title">행복골프 시작하기</string>
    <string name="login_phone">전화번호</string>
    <string name="login_phone_hint">01000000000</string>
    <string name="login_password">비밀번호</string>
    <string name="login_password_hint">********</string>
    <string name="login_button_title">로그인</string>
    <string name="login_password_forget_text">비밀번호를 잊어 버리셨나요?</string>
    <string name="login_empty_user">가입되지 않은 계정 입니다</string>
    <string name="login_empth_phone">핸드폰 번호를 입력해 주세요</string>
    <string name="login_empty_password">비밀번호를 입력해 주세요</string>
    <string name="login_fail_password">비밀번호가 틀렸습니다</string>
    <string name="tutorial_title_text">환영합니다!\n행복골프 GO 입니다.</string>
    <string name="tutorial_reserve_text">학교와 훈련소를 포함하여\n모든 지점을 여기서 예약하실 수 있습니다.</string>
    <string name="tutorial_nfc_text">교통카드 처럼 \n간단하게 체크인하실 수 있습니다.</string>
    <string name="tutorial_reserve_title">행복골프 예약</string>
    <string name="tutorial_nfc_title">NFC 체크인</string>
    <string name="tutorial_btn_text">시작하기</string>
    <string name="gamecenter_toolbar_title">게임센터</string>
    <string name="home_toolbar_text">행복골프GO</string>
    <string name="home_fail_ticket">사용할 수 없는 티켓입니다\n등록된 훈련소에 문의해주세요</string>
    <string name="home_reservation_allowbook_fail">예약은 최대 3개 까지만 가능합니다</string>
    <string name="home_empty_ticket_go">보유하고 있는 이용권이 없습니다\n이용권을 구매해 주세요</string>
    <string name="home_empty_ticket_text">보유하고 있는 이용권이 없습니다.</string>
    <string name="home_bottomview_title">내 예약목록 보기</string>
    <string name="fragment_server_title">일시적인 오류입니다</string>
    <string name="fragment_network_fail_title">인터넷 연결 실패</string>
    <string name="fragment_network_fail_content">인터넷 연결 상태가 좋지 않습니다.\n 확인 후 다시한번 시도해 주세요.</string>
    <string name="fragment_network_fail_btn_text">새로고침</string>
    <string name="mypage_toolbar_title">마이페이지</string>
    <string name="mypage_lesson_title">레슨 일지</string>
    <string name="mypage_info_change">개인정보 변경</string>
    <string name="mypage_password_change">비밀번호 변경</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_version_name">앱 버전</string>
    <string name="mypage_update">최신 버전으로 업데이트</string>
    <string name="myinfo_toolbar_title">개인정보 변경</string>
    <string name="myinfo_show_title">사용하실 이름과 닉네임을 입력해 주세요.</string>
    <string name="myinfo_name_title">이름</string>
    <string name="myinfo_nickname_title">닉네임</string>
    <string name="myinfo_empty_nickname">닉네임을 입력해 주세요</string>
    <string name="myinfo_fail_nickname">2~8글자 사이로 입력해 주세요</string>
    <string name="myinfo_upload_success">변경 되었습니다</string>
    <string name="myinfo_upload_fail">네트워크 상태가 좋지 않습니다</string>
    <string name="myinfo_upload_error">일시적인 오류로 변경에 실패 했습니다</string>
    <string name="pwauth_text">전화번호를 통해 본인을 인증 해주세요</string>
    <string name="pwauth_btn_send">보내기</string>
    <string name="pwauth_phone_title">전화번호</string>
    <string name="pwauth_phone_hint">01000000000</string>
    <string name="pwauth_auth_title">인증번호</string>
    <string name="pwauth_auth_hint">0000</string>
    <string name="pwauth_empty_phone">핸드폰 번호를 입력해 주세요</string>
    <string name="pwauth_fail_length">핸드폰 번호를 올바르게 입력해 주세요</string>
    <string name="pwauth_success_phone">인증 번호가 발송 되었습니다</string>
    <string name="pwauth_fail_phone">인증번호 발송에 실패 했습니다</string>
    <string name="pwauth_toolbar_title">인증번호 발송</string>
    <string name="pwauth_empty_user">가입되지 않은 번호 입니다</string>
    <string name="pwauth_network_fail">네트워크 상태가 좋지 않습니다</string>
    <string name="pwauth_empty_auth">인증번호를 입력해 주세요</string>
    <string name="pwauth_fail_auth">인증번호가 틀립니다</string>
    <string name="pwauth_model_fail">핸드폰 번호로 발급된 인증번호가 아닙니다</string>
    <string name="pwauth_timer_over">시간초과로 인해 인증번호를 재발행 해주세요</string>
    <string name="pwauth_success_auth">인증완료</string>
    <string name="pwauth_uncreate_auth">인증번호를 생성해 주세요</string>
    <string name="pwauth_error_auth">일시적인 오류 발생</string>
    <string name="pwreset_toolbar_title">비밀번호 재설정</string>
    <string name="bottom_view_default">확인</string>
    <string name="pwreset_pw_hint">********</string>
    <string name="pwrest_pw_title">비밀번호</string>
    <string name="pwreset_pw_text">비밀번호 확인</string>
    <string name="pwreset_title">새로운 비밀번호를 입력해 주세요</string>
    <string name="pwreset_fail_password">비밀번호가 같지 않습니다</string>
    <string name="pwreset_input_fail_password">비밀번호를 바르게 입력해 주세요</string>
    <string name="pwreset_unspecial_password">특수문자를 포함할 수 없습니다</string>
    <string name="pwauth_btn_confirm">확인</string>
    <string name="pwreset_change_success">비밀번호가 변경 되었습니다</string>
    <string name="pwreset_please_check_pw">비밀번호를 확인해 주세요</string>
    <string name="lesson_post_list_toolbar_title">레슨 포스트 목록</string>
    <string name="training_record_swing_list_toolbar_title">스윙 영상 (최근 10개)</string>
    <string name="alram_empty_message">알림이 없습니다</string>
    <string name="rhythm_coach_toolbar_title">리듬코치</string>
    <string name="game_record_toolbar_title">기록실</string>
    <string name="alram_toolbar_title">알림</string>
    <string name="ticketdate_toolbar_title">날짜 선택</string>
    <string name="ticketdate_impossible_ticket">당일 중복 예약이 불가능한 이용권 입니다</string>
    <string name="ticketdate_impossible_calendar">선택 하신 날짜는 예약이 불가능 합니다</string>
    <string name="ticketdate_onlyoncetoday_ticket">1일 1회 예약 가능합니다</string>
    <string name="tickettime_toolbar_title">시간 선택</string>
    <string name="reserve_confirm_toolbar_title">예약 확인</string>
    <string name="reserve_confirm_bottom_title">동의하며 예약하기</string>
    <string name="tikect_time_activity_bottom_title">예약하기</string>
    <string name="reserve_confirm_cancel_bottom_title">예약 취소</string>
    <string name="reserve_confirm_lesson_policy">- 예약 취소 정책\n예약 취소는 레슨 당일 이전에만 가능합니다.\n\n- 결석 정책\n예약된 레슨에 결석 시 레슨 이용권이 1회 차감 됩니다.</string>
    <string name="reserve_confirm_ticket_name">예약명</string>
    <string name="reserve_confirm_ticket_date">날짜</string>
    <string name="reserve_confirm_ticket_time">시간</string>
    <string name="reserve_confirm_ticket_plate_number">타석</string>
    <string name="reserve_confirm_policy_title">정책사항</string>
    <string name="default_error_toast">알 수 없는 오류 발생</string>
    <string name="reserve_success_title">예약이 완료 되었습니다</string>
    <string name="reserve_success_title_change">예약시간이 변경 되었습니다</string>
    <string name="reserve_cancel_success_title">예약이 취소 되었습니다</string>
    <string name="reserve_success_bottom_title">확인</string>
    <string name="reserve_list_plate_title">타석 예약</string>
    <string name="reserve_list_lesson_title">개인 레슨</string>
    <string name="reserve_list_toolbar_title">내 예약목록</string>
    <string name="reserve_confirm_cancel_fail">취소하는데 오류가 발생 했습니다</string>
    <string name="ticket_time_empty_time_text">예약가능한 시간이 없습니다</string>
    <string name="fragment_reserve_lesson_empty">예약내역이 없습니다</string>
    <string name="log_toolbar_title">레슨 포스트</string>
    <string name="training_record_score_card_toolbar_title">스코어카드</string>
    <string name="swing_video_player_toolbar_title">스윙 동영상</string>
    <string name="log_comment_tile">나의 코멘트</string>
    <string name="log_video_start_fail">오류로 인한 동영상 시작 실패</string>
    <string name="log_bottom_view_title">코멘트 남기기</string>
    <string name="log_over_comment">후기를 남길 수 있는 기간이 지났습니다</string>
    <string name="comment_subtitle_text">이번 레슨은 어떠셨나요?</string>
    <string name="comment_comment_title">코멘트 남기기</string>
    <string name="comment_comment_hint">코멘트를 남겨주세요</string>
    <string name="comment_empty_rating">평점을 등록해 주세요</string>
    <string name="comment_empty_comment">코멘트를 작성해 주세요</string>
    <string name="comment_upload_fail">서버오류로 인해 업로드에 실패했습니다</string>
    <string name="comment_upload_success">포스트 업로드 성공</string>
    <string name="comment_fail_length">100자 이내로 작성해 주세요</string>
    <string name="default_notification_channel_id" translatable="false">행복골프_기본채널</string>
    <string name="default_notification_text">행복골프 기본 채널입니다</string>
    <string name="fragment_developer_title">개발자 옵션</string>
    <string name="fragment_developer_prodution">Prodution Mode</string>
    <string name="fragment_developer_test">Test Mode</string>
    <string name="fragment_developer_developer">Developer Mode</string>
    <string name="comment_subtitle_content">(남겨주신 별점은 레슨 프로님에게 공개되지 않습니다)</string>
    <string name="fragment_mypage_update_title">업데이트 필요</string>
    <string name="fragment_mypage_record_title">개인 기록</string>
    <string name="fragment_mypage_setting_title">설정</string>
    <string name="reservation_new_list_start_text">시작시간</string>
    <string name="reservation_new_list_end_text">종료시간</string>
    <string name="fragment_gamecenter_average_text">골프력 평균</string>
    <string name="fragment_gamecenter_grade_text">등급</string>
    <string name="fragment_gamecenter_rank_text">랭킹</string>
    <string name="fragment_gamecenter_myinfo_text">나의 데이터</string>
    <string name="fragment_gamecenter_dr_text">DR</string>
    <string name="fragment_gamecenter_wu_text">WU</string>
    <string name="fragment_gamecenter_iron_text">IRON</string>
    <string name="fragment_gamecenter_sw_text">S/W</string>
    <string name="fragment_gamecenter_putt_text">PUTT</string>
    <string name="game_rank_toolbar_title">골프력 게임 랭킹</string>
    <string name="game_rank_tab_title_allgroup">전체</string>
    <string name="game_rank_tab_title_mygroup">훈련소</string>
    <string name="fragment_gamecenter_detail">자세히 보기</string>
    <string name="fragment_gamecenter_all_rank">전체 랭킹</string>
    <string name="fragment_gamecenter_score_average">골프력 게임 평균</string>
    <string name="home_tag_name_reservation">예약</string>
    <string name="home_tag_name_gamecenter">게임센터</string>
    <string name="home_tag_name_alram">알림</string>
    <string name="home_tag_name_training">훈련실</string>
    <string name="home_tag_name_mypage">마이페이지</string>
    <string name="home_app_finish_title">정말 종료하시겠습니까?</string>
    <string name="fragment_alert_title_ignore_max_reservation">최대 예약 초과</string>
    <string name="fragment_alert_message_ignore_max_reservation">최대 예약 가능 횟수를 초과하였습니다. \n새 예약을 하시려면 기존 예약을 취소하셔야 합니다. \n예약 가능 시간을  조회하시겠습니까 ?</string>
    <string name="fragment_alert_cancel_ignore_max_reservation">닫기</string>
    <string name="fragment_alert_okay_ignore_max_reservation"> 조회하기 </string>
    <string name="ticket_time_activity_error_max_reservation_count"> 최대 예약 가능 횟수를 초과하였습니다. </string>
    <string name="ticket_time_activity_error_only_once_day"> 1일 1회 예약 가능합니다. </string>
    <string name="home_app_finish_positive">종료하기</string>
    <string name="home_app_finish_negative">취소</string>
    <string name="fragment_reservation_donot_refresh">가져올 티켓이 없습니다</string>
    <string name="golf_game_average_score">평균점수</string>
    <string name="golf_game_high_score">최고점수</string>
    <string name="golf_game_score_toolbar_title">골프력 게임 스코어</string>
    <string name="tickettime_dont_reservation">예약불가</string>
    <string name="menu_alram_toolbar_title">전체삭제</string>
    <string name="rhythm_coach_background_image_desc">backgroundimage</string>
    <string name="rhythm_coach_btn_bg_speed_down_description">템포 내리기</string>
    <string name="rhythm_coach_fragment_tv_speed_display_description">X 1</string>
    <string name="rhythm_coa_frament_btn_speed_up_description">템포 올리기</string>
    <string name="rhythm_coach_frament_rhythm_coach_btn_bg_pause_description">멈춤</string>
    <string name="rhythm_coach_frament_rhythm_coach_btn_bg_play_description">재생</string>
    <string name="rhythm_coach_frament_rhythm_coach_btn_bg_repeat_off_description">반복재생 멈춤</string>
    <string name="rhythm_coach_fragment_rhythm_coach_btn_repeat_ripple_description">반복재생</string>
    <string name="rhythm_coach_frament_tv_title_description">봄의 왈츠</string>
    <string name="rhythm_coach_fragment_tv_composer_description">차이코프스키</string>
    <string name="rhythm_coach_frament_tv_current_pos">0.0</string>
    <string name="rhythm_coach_fragment_tv_max_pos">0.0</string>
</resources>