<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.artilearn.happygolfgo.ui.pwauth.PwAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        tools:context=".ui.pwauth.PwAuthActivity">

        <include
            android:id="@+id/pwauth_toolbar"
            layout="@layout/custom_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_pwauth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/pwauth_text"
            android:textColor="@color/color_black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwauth_toolbar" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_btn_main"
            android:onClick="@{() -> vm.btnSendClick()}"
            android:text="@string/pwauth_btn_send"
            android:textColor="@color/color_white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/phone_layout"
            app:layout_constraintEnd_toEndOf="@id/pwauth_toolbar"
            app:layout_constraintTop_toTopOf="@id/phone_layout" />

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/btn_send"
            app:layout_constraintStart_toStartOf="@id/pwauth_toolbar"
            app:layout_constraintTop_toBottomOf="@id/tv_pwauth_title">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwauth_phone_title"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/pwauth_phone_hint"
                android:inputType="number"
                android:maxLength="15"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_lucky_gray"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/auth_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/btn_send"
            app:layout_constraintStart_toStartOf="@id/pwauth_toolbar"
            app:layout_constraintTop_toBottomOf="@id/phone_layout">

            <TextView
                android:id="@+id/tv_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwauth_auth_title"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/pwauth_auth_hint"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_lucky_gray"
                android:textSize="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_btn_main"
            android:onClick="@{() -> vm.btnConfirmClick()}"
            android:text="@string/pwauth_btn_confirm"
            android:textColor="@color/color_white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/auth_layout"
            app:layout_constraintEnd_toEndOf="@id/pwauth_toolbar"
            app:layout_constraintTop_toTopOf="@id/auth_layout" />

        <include
            android:id="@+id/pwauth_bottom_view"
            layout="@layout/custom_bottom_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="@{vm.isLoading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>